Fix chat line message alignment.

--- a/doc/twitch_chat.css
+++ b/doc/twitch_chat.css
@@ -51,7 +51,7 @@ figure {
     position: relative;
     top: -3px;
     padding-left: 2px;
-    display: inline;
+    display: inline-flex;
 }
 
 .tw-svg {
@@ -82,7 +82,7 @@ figure {
 }
 
 .user-notice-line p {
-    display: inline;
+    display: inline-block;
 }
 
 a {
@@ -90,7 +90,7 @@ a {
     text-decoration: none;
 }
 
-/* 영문 아이디. 보이지 않게 제거 */
+/* ì˜ë¬¸ ì•„ì´ë””. ë³´ì´ì§€ ì•Šê²Œ ì œê±° */
 .chat-author__intl-login {
     display: none;
 } 
@@ -272,7 +272,7 @@ a {
 
 /* text message */
 .chat-line__no-background > div > span:nth-child(3) {
-    display: inline-block;
+    display: inline-flex;
     padding-left: 2px;
 }
 
@@ -282,7 +282,7 @@ a {
 }
 
 .chat-image {
-    display: inline-block; 
+    display: inline-block;
 }
 
 .chat-line__message-container {
